manifests/db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: mysql:8.0.25
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        command: ["/bin/bash", "-c"]
        args: 
          - echo "CREATE DATABASE IF NOT EXISTS test;" >> /docker-entrypoint-initdb.d/init.sql;
            echo "CREATE DATABASE IF NOT EXISTS users;" >> /docker-entrypoint-initdb.d/init.sql;
            /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 3306
