manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: cluster-ip
      http:
        paths:
          - path: /api/v1/users/.*/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-monolith
                port:
                  number: 8080
          - path: /api/v1/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-users-service
                port:
                  number: 8081
          - path: /api/v1/books(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-monolith
                port:
                  number: 8080
